# rlhf-hybrid-capstone

./: analyze_checkpoint.py  diagnose.py  entropy_demo.py  final_results.txt  main.py  new.txt  pyproject.toml  requirements.txt
checkpoints/: checkpoint_phase1_done.pt  checkpoint_round1_complete.pt  checkpoint_round1_iter10.pt  checkpoint_round1_iter20.pt  checkpoint_round1_sac_done.pt  checkpoint_round2_complete.pt  checkpoint_round2_iter10.pt  checkpoint_round2_iter20.pt  checkpoint_round2_sac_done.pt  checkpoint_round3_complete.pt  checkpoint_round3_iter10.pt  checkpoint_round3_iter20.pt  checkpoint_round3_sac_done.pt  checkpoint_round4_complete.pt  checkpoint_round4_iter10.pt  checkpoint_round4_iter20.pt  checkpoint_round4_sac_done.pt  checkpoint_round5_complete.pt  checkpoint_round5_iter10.pt  checkpoint_round5_iter20.pt  checkpoint_round5_sac_done.pt
configs/: base_config.yaml  cartpole_aggressive.yml  cartpole_conservative.yaml  cartpole_deafult.yml  cartpole_exploration.yml  hpc_config.yaml  metaworld_door_open.yml  metaworld_drawerr_open.yml  test_ablation.yaml
diagnostics_recovered/: dual_agent_stats_recovered.csv  plot_generator.py  query_log_recovered.csv  reward_correlations_recovered.csv  sac_performance_recovered.csv
experiments/: run_cartpole_demo.py  simple_sweep.py  train.py
logs/: dual_agent_stats.csv  experiment_log.txt  loop_diagnostics.csv  query_log.csv  reward_correlations.csv  sac_performance.csv  training_output.txt
tests/: test_ch1_ensemble.py  test_ch2_graph.py  test_ch3_active.py  test_ch4_dethroning.py  test_ch5_integration.py  (+3 more)
(+15 files in other folders)
